--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@ $browser = zen-browser
 exec-once = waybar
 exec-once = openrgb -p red
 exec-once = swww-daemon
-exec-once = hyprctl setcursor Sunset-cursors 22
+exec-once = hyprctl setcursor everforest-cursors 24
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
