--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,190 +1,19 @@
-monitor=DP-1,1920x1080@300.00,0x0,1
-
-$terminal = kitty
-$fileManager = thunar
-$menu = rofi -show drun
-$browser = zen-browser
-
-exec-once = waybar
-exec-once = openrgb -p red
-exec-once = swww-daemon
-exec-once = hyprctl setcursor Moga-White 24
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = GDK_SCALE,1
-
-general {
-    gaps_in = 4
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgb(E6E3DE)
-    col.inactive_border = 0x59595900
-    resize_on_border = false
-    allow_tearing = false
-    layout = dwindle
-}
-decoration {
-    rounding = 0
-    active_opacity = 0.9
-    inactive_opacity = 0.75
-
-    shadow {
-        enabled = true
-        range = 40              # softness / spread
-        render_power = 3        # intensity of falloff
-        color = rgba(0, 0, 0, 0.5)  # main shadow color
-        scale = 1.0
-    }
-
-    blur {
-        enabled = true
-        size = 12
-        passes = 3
-        ignore_opacity = true
-        noise = 0.0117
-        contrast = 0.8916
-        xray = false
-        new_optimizations = true
-        }
-}
-animations {
-    enabled = yes
-    # curves
-    bezier = easeOutQuint,      0.23, 1.00, 0.32, 1.00
-    bezier = easeInOutCubic,    0.65, 0.05, 0.36, 1.00
-    bezier = quick,             0.15, 0.00, 0.10, 1.00
-    bezier = elastic,           0.34, 1.56, 0.64, 1.00   # ★ elastic bounce curve
-    # global
-    animation = global,          1, 9.5, easeInOutCubic
-    # dragging/moving
-    animation = windows,         1, 4.7, easeOutQuint
-    # ★ WINDOWS OPEN: Bounce-in + slide upward
-    animation = windowsIn,       1, 5.0, elastic, popin 90%, slidevert
-    # ★ WINDOWS CLOSE: Shrink upward + fade
-    animation = windowsOut,      1, 2.0, quick, popin 70%, slidevert, fade
-    # fades
-    animation = fadeIn,          1, 1.55, quick
-    animation = fadeOut,         1, 1.45, quick
-    animation = fade,            1, 2.6, quick
-    # layers (rofi, bar, notifications)
-    animation = layers,          1, 3.9, easeOutQuint
-    animation = layersIn,        1, 4.0, easeOutQuint, fade
-    animation = layersOut,       1, 1.5, quick, fade
-    animation = fadeLayersIn,    1, 1.7, quick
-    animation = fadeLayersOut,   1, 1.35, quick
-    # workspace transitions
-    animation = workspaces,      1, 2.3, easeInOutCubic, slidefadevert
-    animation = workspacesIn,    1, 1.25, easeOutQuint, slidefadevert
-    animation = workspacesOut,   1, 2.3, easeInOutCubic, slidefadevert
-    # borders
-    animation = border,          1, 5.7, easeOutQuint
-    animation = borderangle,     16, loop
-    # zoom
-    animation = zoomFactor,      1, 7, quick
-}
-dwindle {
-    pseudotile = true
-    preserve_split = true
-}
-master {
-    new_status = master
-}
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-    follow_mouse = 1
-    accel_profile = flat
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    touchpad {
-        natural_scroll = false
-    }
-}
-gesture = 3, horizontal, workspace
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-$mainMod = SUPER # Sets "Windows" key as main modifier
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, W, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen
-
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
-
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/waybar-reload.sh
-
-bind = $mainMod, R,submap,resize
-submap=resize
-binde = , right, resizeactive, 10 0
-binde = , left, resizeactive, -10 0
-binde = , up, resizeactive, 0 -10
-binde = , down, resizeactive, 0 10
-binde = , escape,submap,reset
-submap=reset
+source = ~/.config/hypr/configs/animations.conf
+source = ~/.config/hypr/configs/envs.conf
+source = ~/.config/hypr/configs/execs.conf
+source = ~/.config/hypr/configs/general.conf
+source = ~/.config/hypr/configs/gestures.conf
+source = ~/.config/hypr/configs/inputs.conf
+source = ~/.config/hypr/configs/keybinds.conf
+source = ~/.config/hypr/configs/monitors.conf
+source = ~/.config/hypr/configs/rules.conf
 
 
-windowrulev2 = suppressevent maximize, class:.*
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrulev2 = opacity 0.97 0.9, class:.*
-windowrulev2 = float,class:tui
-windowrulev2 = size 900 600,class:tui
-windowrulev2 = center,class:tui
+
+
+
+
+
+
+
+
