Updated Keybinds and Added ALT-TAB

--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -45,6 +45,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, ESCAPE, exec, ~/.config/hypr/scripts/power-menu
+bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/waybar-reload
+bindr = $mainMod, Tab, workspace, +1
+bindr = $mainMod SHIFT, Tab, workspace, -1
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -62,8 +65,6 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
-bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/waybar-reload.sh
 
 bind = $mainMod, R,submap,resize
 submap=resize
