--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -1,6 +1,7 @@
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrulev2 = opacity 0.97 0.9, class:.*
-windowrulev2 = float,class:tui
-windowrulev2 = size 900 600,class:tui
-windowrulev2 = center,class:tui
+# All TUI floating terminals
+windowrulev2 = title:^(bluetui|impala|wiremix)$, floating:1
+windowrulev2 = title:^(bluetui|impala|wiremix)$, center:1
+windowrulev2 = title:^(bluetui|impala|wiremix)$, size:900 600
