Added Wallpaper Picker

--- a/hypr/configs/envs.conf
+++ b/hypr/configs/envs.conf
@@ -19,3 +19,5 @@ env = ELECTRON_ENABLE_WAYLAND,1
 env = QT_IM_MODULE,fcitx
 env = QT_IM_MODULES,wayland;fcitx
 env = XMODIFIERS,@im=fcitx
+
+env = PATH,$HOME/.local/bin:/usr/local/bin:/usr/bin
