--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -1,11 +1,12 @@
 $terminal = kitty
-$fileManager = nautilus
-$menu = walker
+$fileManager = thunar
+$menu = rofi -show drun
 $browser = zen-browser
 
 $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod SHIFT, SPACE, exec, wallpaper-picker
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
@@ -44,8 +45,8 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod, ESCAPE, exec, ~/.config/hypr/scripts/power-menu
-bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/waybar-reload
+bind = $mainMod, ESCAPE, exec, power-menu
+bind = $mainMod SHIFT, W, exec, refresh-waybar
 bindr = $mainMod, Tab, workspace, +1
 bindr = $mainMod SHIFT, Tab, workspace, -1
 
