--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -9,7 +9,6 @@
     "custom/cava",
     "group/tray-expander",
     "custom/seperator",
-    "power-profiles-daemon",
     "pulseaudio",
     "bluetooth",
     "network",
@@ -56,7 +55,7 @@
       "transition-duration": 600,
       "children-class": "tray-group-item"
     },
-    "modules": ["custom/expand-icon", "tray"]
+    "modules": ["custom/expand-icon", "tray", "power-profiles-daemon"]
   },
   "custom/expand-icon": {
         "format": " ",
@@ -64,7 +63,7 @@
   },
   "tray": {
     "icon-size": 16,
-    "spacing": 12,
+    "spacing": 16,
   },
   "power-profiles-daemon": {
     "format": "{icon}",
