--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -47,25 +47,16 @@ bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots/
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, ESCAPE, exec, power-menu
 bind = $mainMod SHIFT, W, exec, refresh-waybar
-bindr = $mainMod, Tab, workspace, +1
-bindr = $mainMod SHIFT, Tab, workspace, -1
+
+# TAB between workspaces
+bindd = SUPER, TAB, Next workspace, workspace, e+1
+bindd = SUPER SHIFT, TAB, Previous workspace, workspace, e-1
+bindd = SUPER CTRL, TAB, Former workspace, workspace, previous
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 
 bind = $mainMod, R,submap,resize
 submap=resize
@@ -75,3 +66,10 @@ binde = , up, resizeactive, 0 -10
 binde = , down, resizeactive, 0 10
 binde = , escape,submap,reset
 submap=reset
+
+
+#SwayOSD
+bind = , XF86AudioRaiseVolume, exec, swayosd-client --volume raise
+bind = , XF86AudioLowerVolume, exec, swayosd-client --volume lower
+bind = , XF86AudioMute, exec, swayosd-client --volume mute
+
