--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -1,7 +1,9 @@
-windowrulev2 = suppressevent maximize, class:.*
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrulev2 = opacity 0.97 0.9, class:.*
-# All TUI floating terminals
-windowrulev2 = title:^(bluetui|impala|wiremix)$, floating:1
-windowrulev2 = title:^(bluetui|impala|wiremix)$, center:1
-windowrulev2 = title:^(bluetui|impala|wiremix)$, size:900 600
+windowrule = match:class .*, suppress_event maximize
+
+windowrule = match:class ^$, match:title ^$, match:xwayland true, match:float true, match:fullscreen false, match:pin false, no_focus on
+
+windowrule = match:class .*, opacity 0.97 0.90
+
+windowrule = match:class ^thunar$, opacity 0.50
+
+windowrule = match:title ^(bluetui|impala|wiremix)$, float on, center on, size 900 600
