--- a/hypr/configs/keybinds.conf
+++ b/hypr/configs/keybinds.conf
@@ -49,7 +49,7 @@ bind = $mainMod, ESCAPE, exec, power-menu
 bind = $mainMod SHIFT, W, exec, refresh-waybar
 
 # TAB between workspaces
-bindd = SUPER, TAB, Next workspace, workspace, e+1
+bindd = ALT, TAB, Next workspace, workspace, e+1
 bindd = SUPER SHIFT, TAB, Previous workspace, workspace, e-1
 bindd = SUPER CTRL, TAB, Former workspace, workspace, previous
 
@@ -57,16 +57,6 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-bind = $mainMod, R,submap,resize
-submap=resize
-binde = , right, resizeactive, 10 0
-binde = , left, resizeactive, -10 0
-binde = , up, resizeactive, 0 -10
-binde = , down, resizeactive, 0 10
-binde = , escape,submap,reset
-submap=reset
-
 
 #SwayOSD
 bind = , XF86AudioRaiseVolume, exec, swayosd-client --volume raise
