--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 font_family			 family="JetBrainsMono Nerd Font Mono"
-font_size			16
+font_size			12.0
+line_height			1.2
+letter_spacing			0.0
 bold_font			auto
 italic_font			auto
 bold_italic_font		auto
