Removed gtk.css from 3 and 4

--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -4,6 +4,6 @@ windowrule = match:class ^$, match:title ^$, match:xwayland true, match:float tr
 
 windowrule = match:class .*, opacity 0.97 0.90
 
-windowrule = match:class ^thunar$, opacity 0.50
+windowrule = match:class ^thunar$, opacity 0.85 0.75
 
 windowrule = match:title ^(bluetui|impala|wiremix)$, float on, center on, size 900 600
