--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,126 +1,196 @@
+source = ~/.config/hypr/colors.conf
+
+$scrPath      = ~/.config/hypr/hyprlock/
+$imgPath      = ~/.current_wallpaper
+
+$USER         = aman
+$host         = uname -n
+
+$wallpaper    = screenshot
+$blur         = 2
+
+$rounding     = 12
+$shape-rd     = -1
+$font-text    = GeistMono Nerd Font Bold
+$font-text0   = GeistMono Nerd Font
+$font-display = PP Neue Machina Ultra-Bold
+$font-symbol  = JetBrainsMono Nerd Font Mono
+
+$weight       = 2
+
+# ----------------Matugen-colors----------------
+
+$inner-color  = $surface_container
+$border-color = rgba($outline, 0.6)
+
+$clock-color  = $primary
+$fg0          = $on_surface
+$fg1          = $surface
+
+$shadow-color = $shadow
+
+$shadow-pass  = 2
+$shadow-size  = 3
+$shadow-boost = 1.2
+$text-shadow-pass   = 1
+$text-shadow-boost  = 0.5
+
+
+# ---------------- GENERAL ----------------
 general {
-    grace = 1
-    fractional_scaling = 2
-#    immediate_render = true
+    no_fade_in          = true
+    grace               = 1
+    disable_loading_bar = false
+    hide_cursor         = true
+    ignore_empty_input  = true
+    text_trim           = true
 }
 
+# ---------------- BACKGROUND ----------------
 background {
     monitor =
-    path = $HOME/.current_wallpaper
+    path = $wallpaper
 
-    blur_size = 3
-    blur_passes = 4
-
-    brightness = 0.7
-    contrast = 1.0
-    vibrancy = 0.0
-    vibrancy_darkness = 0.0
-    noise = 0.0
-
-    color = #000000
+    blur_passes = $blur
+    contrast = 0.8916
+    brightness = 0.7172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0
 }
 
+#------------------ PROFILE PICTURE -------------
+image {
+    monitor     =
+    path        = ~/Pictures/pfp.jpg 
+    size        = 120
+    opacity     = 0.25
 
+    shadow_pass         = $shadow-pass
+    shadow_size         = $shadow-size
+    shadow_color        = $shadow-color
+    shadow_boost        = $shadow-boost
 
-# Hours
+    rounding            = $rounding
+    border_size         = 4
+    rotate              = 0
+    
+    position            = 20, -20
+    halign              = left
+    valign              = top
+    zindex              = 1
+}
+
+#-------------------------- USER INFO -------------------------------
+label {
+    monitor     =
+    text        = cmd[update:1000] echo -e "$USER\n󰁥 $($host)\n\n$(uname -r)\nPackages: $(pacman -Q | wc -l) pacman"
+    
+    shadow_passes       = 1
+    shadow_boost        = 0.5
+    
+    color               = $fg0
+    font_size           = 11
+    font_family         = $font-text
+
+    position            = 170, -35
+    halign              = left
+    valign              = top
+}
+
+# ---------------- CLOCK (HOURS) ----------------
 label {
     monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%H") </big></b>"
-    color = $on_secondary_container
-    font_size = 112
-    font_family = Adwaita Sans
-    shadow_passes = 0
-    shadow_size = 0
+    text = cmd[update:1000] date +"%H"
+    color = $clock-color
 
-    position = 0, 220
+    shadow_pass = $shadow-pass
+    shadow_size = $shadow-size
+    shadow_color = $shadow-color
+    shadow_boost = $shadow-boost
+
+    font_size = 120
+    font_family = $font-display
+
+    position = 0, 160
     halign = center
     valign = center
 }
 
-# Minutes
+# ---------------- CLOCK (MINUTES) ----------------
 label {
     monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = $on_secondary_container
-    font_size = 112
-    font_family = Adwaita Sans
-    shadow_passes = 0
-    shadow_size = 0
+    text = cmd[update:1000] date +"%M"
+    color = $clock-color
 
-    position = 0, 80
+    shadow_pass = $shadow-pass
+    shadow_size = $shadow-size
+    shadow_color = $shadow-color
+    shadow_boost = $shadow-boost
+
+    font_size = 120
+    font_family = $font-display
+
+    position = 0, 10
     halign = center
     valign = center
 }
 
-# Today
+# ---------------- GREETING ----------------
 label {
     monitor =
-    text = cmd[update:18000000] echo "<b><big> "$(date +'%A')" </big></b>"
-    color = $secondary
-    font_size = 18
-    font_family = JetBrainsMono NFM
+    text = cmd[update:1000] echo "$(bash $scrPath/greeting.sh)"
 
-    position = 0, -15
+    shadow_passes = $text-shadow-pass
+    shadow_boost  = $text-shadow-boost
+
+    color = $fg0
+    font_size = 11
+    font_family = $font-text
+
+    position = 0, -150
     halign = center
     valign = center
 }
-
-# Week
+# ---------------- DATE ----------------
 label {
     monitor =
-    text = cmd[update:18000000] echo "<b> "$(date +'%d %b')" </b>"
-    color = $secondary
+    text = cmd[update:1000] bash -c 'day=$(date +%d); case "$day" in 1) suffix="st";; 2) suffix="nd";; 3) suffix="rd";; *) suffix="th";; esac; echo -e "$(date +"%B %e")'$day'$suffix, $(date +%Y)"'
+
+    shadow_passes = $text-shadow-pass
+    shadow_boost  = $text-shadow-boost
+
+    color = $fg0
     font_size = 14
-    font_family = JetBrainsMono Nerd Font 10
+    font_family = $font-text
 
-    position = 0, -40
+    position = 0, -200
     halign = center
     valign = center
 }
 
-# Degrees
-#label {
-    monitor =
-    text = cmd[update:18000000] echo "<b>Feels like<big> $(curl -s 'wttr.in?format=%t' | tr -d '+') </big></b>"
-    color = $color8
-    font_size = 14
-    font_family = JetBrainsMono NFM
-
-    position = 0, 40
-    halign = center
-    valign = bottom
-}
-
-# USER
-#label {
-    monitor =
-    text = $USER
-    color = $color8
-    font_size = 14
-    font_family = JetBrainsMono NFM Bold
-    position = 0, 200
-    halign = center
-    valign = bottom
-}
-
+# ---------------- INPUT FIELD ----------------
 input-field {
     monitor =
-    size = 250, 50
-    outline_thickness = 3
+    size = 275, 55
+    rounding = $rounding
 
-    dots_size = 0.26 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.64 # Scale of dots' absolute size, 0.0 - 1.0
+    outline_thickness = $weight
+    outer_color = $border-color
+    dots_size = 0.1
+    dots_spacing = 1
     dots_center = true
-    dots_rouding = -1
 
-    rounding = 22
-    outer_color = $source_color
-    inner_color = rgba(255, 255, 255, 0.1)
-    font_color = $secondary
-    fade_on_empty = true
-    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+    inner_color = $surface_container_highest
+    font_color  = $on_surface
 
-    position = 0, 120
+    fade_on_empty = false
+
+    font_family = $font-text
+    placeholder_text = <span>󰢏 $USER</span>
+    hide_input = false
+
+    position = 0, -260
     halign = center
-    valign = bottom
+    valign = center
+    zindex = 10
 }
